# WinCAMP

./: .gitignore  CMakeLists.txt  README.md
docs/: structure.md
src/: CMakeLists.txt  hello.cpp  hello.h  task.cpp  task.h  worker.cpp  worker.h
src/gui/: CMakeLists.txt  mainwindow.cpp
test/: CMakeLists.txt  test_worker.cpp
